wp-content/themes/papel-ilustrado/scss/custom/_page-composiciones.scss
.page-composiciones {
   padding-bottom: 100px;
   &__grid {
      display: flex;
      flex-wrap: wrap;
      padding: 20px 0;
      margin: 0 -15px;
      .cards {
         flex: 0 0 25%;
         max-width: 25%;
         padding: 20px 0;
         &.test {
            flex: 0 0 33% !important;
            max-width: 33% !important;
         }
      }
   }
   @include mq($from: tablet, $until: desktop) {
      &__grid {
         .cards {
            flex: 0 0 33.333%;
            max-width: 33.333%;
         }
      }
   }
   @include mq($from: mobile, $until: tablet) {
      padding-bottom: 60px;
      &__grid {
         .cards {
            flex: 0 0 50%;
            max-width: 50%;
         }
      }
   }
}

.build-composition {
   &__nav {
      img {
         height: 80px;
         width: 80px;
      }
   }
   &__modal {
      display: flex;
      flex-direction: column;
      justify-content: flex-end;
      align-items: center;
      position: relative;
      margin: 0 auto;
      .build__bg {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
         z-index: -1;
         @include bg-center;

         /* Aqui esta esto para cuando no hay composicion seleccionada */
         &-noselected {
            background: $color-indigo;
            outline: white 4px dashed;
            outline-offset: -2rem;
         }
      }
      .build__btn {
         position: relative;
         top: -140px;
      }
      .build-price {
         width: 100%;
         display: flex;
         padding: 20px;
         justify-content: center;
         align-items: center;
         background-color: rgba($color: $color-indigo, $alpha: 0.4);
         &__number {
            display: flex;
            color: $color-white;
            font-size: 26px;
            margin-right: 50px;
            @include fonts-display(500);
            h2 {
               font-size: 26px;
               color: $color-white;
               text-transform: uppercase;
               margin: 0;
               @include fonts-display(500);
            }
         }
      }
      .build_lista {
         position: absolute;
         right: 0;
         // background-color: black;
         color: white;
         top: 10px;
         ul {
            li {
               display: flex;
               margin: 0.2rem;

               .no-selected {
                  width: 15rem;
                  background-color: $color-indigo;
                  color: $color-white;
                  outline: 2px white dashed !important;
                  outline-offset: -0.5rem;
               }

               .selected {
                  width: 15rem;
                  position: relative;
                  display: grid;
                  text-align: left;
                  grid-template-columns: 2rem auto 1rem;
                  grid-template-rows: repeat(2, 1fr);
                  background-color: $color-indigo;
                  color: $color-white;

                  button {
                     grid-row: span 2;
                     background-color: rgba($color: $color-indigo, $alpha: 0.4);
                  }
                  .selected-close {
                     grid-row: span 2;
                     place-self: center;
                     cursor: pointer;
                  }
                  .number {
                     position: absolute;
                  }
               }
            }
         }
      }

      @include mq($from: wide) {
         $width: 1040px;
         height: 700px;
         height: calc(0.67 * #{$width});
         max-width: $width;
      }
      @include mq($from: desktop, $until: wide) {
         $width: 900px;
         height: 600px;
         height: calc(0.67 * #{$width});
         max-width: $width;
      }
      @include mq($from: tablet, $until: desktop) {
         $width: 690px;
         height: 460px;
         height: calc(0.67 * #{$width});
         max-width: $width;
      }

      // Responsive
      @include mq($from: mobile, $until: tablet) {
         $width: 300px;
         height: 460px;
         height: calc(0.67 * #{$width});
         max-width: $width;
         &__slider {
            position: relative;
            padding-bottom: 100px;
         }
      }
   }
}

.build-modal__container {
   max-width: 1140px;
   margin: 0 auto;
   @import "../components/modal";
   // Version mobile
   &.mobile {
      display: none;
      .build__row {
         height: auto;
         overflow: unset;
      }
      .build-price {
         &__container {
            @include f-center;
            display: flex;
         }
         &__number {
            @include f-center;
            display: flex;
         }
      }
   }
   @include mq($from: mobile, $until: tablet) {
      &.mobile {
         display: block;
         .build-price {
            position: absolute;
            bottom: 0;
            left: 0;
            width: 100vw;
            &__msg {
               color: $color-white;
               font-size: 12px;
               text-align: center;
               padding: 6px 10px;
               @include fonts-display(500);
               &.green {
                  background-color: $color-dark_green;
               }
               &.red {
                  background-color: $color-salmon;
               }
            }
            &__number {
               color: $color-white;
               font-size: 18px;
               @include fonts-display(700);
               h2 {
                  display: none;
               }
            }
            &__container {
               background-color: $color-indigo;
               padding: 8px 20px;
               justify-content: space-between;
               button {
                  background-color: $color-white;
                  color: $color-indigo;
                  font-weight: 700;
                  padding: 12px 20px;
                  &.disabled {
                     color: rgba($color: $color-white, $alpha: 0.4);
                  }
               }
            }
         }
      }
   }
}

.slider-nav {
   @include slider__marginB;
   .slick-prev {
      @include slider__arrowLeft;
      left: -30px;
      &:hover {
         &::before {
            filter: grayscale(0);
         }
      }
   }
   .slick-next {
      @include slider__arrowRight;
      right: -30px;
      top: 41%;
      &:hover {
         &::before {
            filter: grayscale(0);
         }
      }
   }
}

